--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {
-        "mockery/mockery": "^1.4"
+        "mockery/mockery": "^1.4",
+        "twilio/sdk": "^6.37",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
         "psr-4": {
